tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/int_logical_and.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(1 && 2)

